Implemented the next section of the search
Added in the cases for date possibilities to catch all relevant
announcements from he search parameters.

Created e_announcements/search_results.html which needs to be formatted
to the e-annz style.

Moved compare_timedeldatas method to tinkerController since E-annz ad
events b both can use it

--- a/tinker/e_announcements/templates/ea-home.html
+++ b/tinker/e_announcements/templates/ea-home.html
@@ -121,8 +121,8 @@
         $(".delete-press").click(function () {
             $("#modal-confirm").attr("href", "/e-announcements/delete/" + $(this).data('e-announcement-id'));
         });
-        function search_events() {
-            search_url = "{{ url_for('events.EventsView:search') }}";
+        function search_announcements() {
+            search_url = "{{ url_for('e_announcements.EAnnouncementsView:search') }}";
             $('#spinner').show();
             inputs = {
                 "title": $("#annzTitle").val(),
@@ -143,10 +143,10 @@
                 }
             });
         }
-        $(".search-events").click(function () {
-            search_events();
+        $(".search-announcements").click(function () {
+            search_announcements();
         });
-        search_events();
+        search_announcements();
     </script>
 
 {% endblock %}
