Javascript extracted to its own file from E-Annz form.html to be used in ea-home.html as well

--- a/tinker/e_announcements/templates/search_results.html
+++ b/tinker/e_announcements/templates/search_results.html
@@ -1,5 +1,5 @@
 {% block main_content %}
-    {% for form in forms %}
+    {% for form in list_of_annz %}
         <div class="card">
             <div class="content">
                 <p>
