--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -113,7 +113,6 @@
                     document.getElementById(end).style.display = 'block'
                 }
             }
-{#            document.getElementById('end').value = document.getElementById('start').value;#}
         }
 
         function fillEndDate(id) {
@@ -124,6 +123,7 @@
         }
     </script>
     <div class="content">
+        {{ dates|safe }}
         <div class="container-fluid">
             <div class="col-md-12">
                 <p>If you have any questions as you submit your event, please contact Conference and Event Services
@@ -239,6 +239,7 @@
     <script type="text/javascript">
 
         $(document).ready(function () {
+            debugger;
             $("#date-delete1").hide();
             addHandler(1);
 
@@ -276,7 +277,9 @@
             $('#registration_heading').change();
 
             function newFieldset(id) {
+                var startlabel = 'startlabel' + id;
                 var start = 'start' + id;
+                var endlabel = 'endlabel' + id;
                 var end = 'end' + id;
                 var all = 'allday' + id;
                 var alllabel = 'alldaylabel' + id;
@@ -297,9 +300,9 @@
                                 .append($("<span>").addClass("second-icon fa fa-check-square-o")))
                         .append($("<input type='checkbox'>").addClass("alldaycheck").attr('id', all).attr('name', all))
                         .append("All Day"));
-                inner_node.append($("<label>").attr('for', start).html("Start Date"));
+                inner_node.append($("<label>").attr('for', start).attr('id', startlabel).html("Start Date"));
                 inner_node.append($("<input type='text'>").attr('name', start).attr('id', start).addClass("datepicker").attr('onchange', "fillEndDate(" + id + ")"));
-                inner_node.append($("<label>").attr('for', end).html("End Date"));
+                inner_node.append($("<label>").attr('for', end).attr('id', endlabel).html("End Date"));
                 inner_node.append($("<input type='text'>").attr('name', end).attr('id', end).addClass("datepicker"));
 
                 inner_node.append($("<label>").addClass("checkbox").attr("id", noendlabel).attr("for", noend).attr('onclick', "checkNoEndDate(" + id + ", true)")
@@ -324,7 +327,7 @@
                 return fieldset_node;
             }
 
-            function populateFieldset(id, allday, start, end, out, timezone) {
+            function populateFieldset(id, allday, start, end, out, timezone, noenddate) {
                 var startid = '#start' + id;
                 var endid = '#end' + id;
                 var alldayid = '#allday' + id;
@@ -332,13 +335,20 @@
                 var outid = '#needtimezone' + id;
                 var timezoneid = '#timezone' + id;
                 var timezonelabel = '#needtimezonelabel' + id;
+{#                var noendid = '#noenddate' + id;#}
+{#                var noendlabel = '#noendlabel' + id;#}
                 $(startid).val(start);
                 $(endid).val(end);
                 $(timezoneid).val(timezone);
+{#                if (noenddate) {#}
+{#                    $(noendid).attr('checked', true);#}
+{#                    $(noendlabel).addClass('checked');#}
+{#                }#}
+                debugger;
                 if (allday) {
                     $(alldayid).attr('checked', true);
                     $(alldaylabel).addClass('checked');
-              }
+                }
                 if (out) {
                     $(outid).attr('checked', true);
                     $(timezonelabel).addClass('checked');
@@ -416,7 +426,7 @@
                     });
                 });
 
-
+                debugger;
                 {% if dates %}
                     var dates = {{ dates|safe }};
                     var i = 0;
@@ -440,7 +450,13 @@
                         if (allday && allday.substr(-3) == "Yes") {
                             allday = true;
                         }
-                        populateFieldset(id, allday, date['start_date'], date['end_date'], date['outside_of_minnesota'], date['time_zone']);
+
+{#                        var noenddate = date['no_end_date'];#}
+{#                        if (noenddate && noenddate.substr(-3) == "Yes") {#}
+{#                            noenddate = true;#}
+{#                        }#}
+                        debugger;
+                        populateFieldset(id, allday, date['start_date'], date['end_date'], date['outside_of_minnesota'], date['time_zone']{#, noenddate #});
                         //no infinite loops today
                         i++;
 
@@ -449,13 +465,14 @@
                 {% endif %}
 
                 {% if form.errors or not dates_good and num_dates %}
-                    var event_dates = {{ event_dates|safe }};
+                    var event_dates = {{ dates|safe }};
                     var tt = {{ num_dates }};
                     for (var i = 1; i < {{ num_dates + 1}}; i++) {
                         if (i == 1) {
                             $('#allday1').prop('checked', event_dates['allday1']);
                             $('#start1').val(event_dates['start1']);
                             $('#end1').val(event_dates['end1']);
+{#                            $('#noenddate1').prop('checked', event_dates['noenddate1']);#}
                         } else {
                             newFieldset(i);
                             var fieldsets = $(".date-fieldset");
@@ -466,6 +483,7 @@
                             $('#end' + i).val(event_dates['end' + i]);
                             $('#needtimezone' + i).val(event_dates['needtimezone' + i]);
                             $('#timezone' + i).val(event_dates['timezone' + i]);
+{#                            $('#noenddate' + i).prop('checked', event_dates['noenddate' + i]);#}
                         }
                     }
 
