changed name to E_annz_search_results for clarity since name "search_results.html" used in events
JS file was not functioning correctly, changes to come

--- a/tinker/e_announcements/templates/ea-home.html
+++ b/tinker/e_announcements/templates/ea-home.html
@@ -68,7 +68,8 @@
 {% endblock %}
 
 {% block scripts %}
-
+    {#  Script to do Bethel E-Announcements fancyness for blacking out dates to pick  #}
+    <script type="text/javascript" src="E-Announcements-pikaday.js"></script>
     {#  Script to update the modal submit to delete the correct form#}
     <script type="text/javascript">
         $(".delete-press").click(function () {
