--- a/tinker/events/templates/event-form.html
+++ b/tinker/events/templates/event-form.html
@@ -123,7 +123,7 @@
         }
     </script>
     <div class="content">
-        {{ dates|safe }}
+{#        {{ dates|safe }}#}
         <div class="container-fluid">
             <div class="col-md-12">
                 <p>If you have any questions as you submit your event, please contact Conference and Event Services
@@ -239,7 +239,6 @@
     <script type="text/javascript">
 
         $(document).ready(function () {
-            debugger;
             $("#date-delete1").hide();
             addHandler(1);
 
