--- a/tinker/e_announcements/templates/E_annz_search_results.html
+++ b/tinker/e_announcements/templates/E_annz_search_results.html
@@ -1,56 +1,71 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
-{#This will eventually contain the macros and general formatting for the E-Annz that are produced from the search#} 
-{% block main_content %}
-    {% for form in forms %}
-        <div class="card">
-            <div class="content">
-                <p>
-                    {% if form.path != '' %}
-                        <a href={{ form.path }}>{{ form.title }}</a>
-                    {% else %}
-                        {{ form.title }}
-                    {% endif %}
-                    <br/>
-                    <small>{{ form.first_date | safe }}</small>
-                    <br/>
-                    <small>{{ form.second_date | safe }}</small>
-                </p>
-                <div class="large-6 columns small-3">
-                    <ul class="btn-group-horizontal">
-                        {% if form.workflow_status %}
-                            <li>This announcement is pending approval.</li>
+<div class="content">
+    <div class="container-fluid">
+        <div class="col-md-12">
+        {% for form in list_of_annz %}
+            <div class="card">
+                <div class="content">
+                    <p>
+                        {% if form.path != '' %}
+                            <a href={{ form.path }}>{{ form.title }}</a>
                         {% else %}
-                            {% if not form.first_date_past and not form.second_date_past %}
-                                <li>
-                                    <a href="{{ url_for('e_announcements.EAnnouncementsView:edit', e_announcement_id=form.id) }}"
-                                       class="btn btn-primary">Edit</a></li>
-                            {% else %}
-                                <li>
-                                    <a href="{{ url_for('e_announcements.EAnnouncementsView:view', e_announcement_id=form.id) }}"
-                                       class="btn btn-primary">View</a></li>
-                            {% endif %}
-                            <li>
-                                <a href="{{ url_for('e_announcements.EAnnouncementsView:duplicate', e_announcement_id=form.id) }}"
-                                   class="btn btn-primary">Duplicate</a></li>
-                            {% if not form.first_date_past %}
-                                <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}"
-                                       data-e-announcement-id="{{ form.id }}"
-                                       class="small btn btn-primary btn-alert delete-press"
-                                       data-toggle="modal" data-target="#myModal">Delete</a></li>
-                            {% endif %}
+                            {{ form.title }}
                         {% endif %}
-                    </ul>
+                        <br/>
+                        <small>{{ form.html_first | safe }}</small>
+                        <br/>
+                        <small>{{ form.html_second | safe }}</small>
+                    </p>
+                    <div class="large-6 columns small-3">
+                        <ul class="btn-group-horizontal">
+                            {% if form.workflow_status %}
+                                <li>This announcement is pending approval.</li>
+                            {% else %}
+                                {% if not form.first_date_past and not form.second_date_past %}
+                                    <li>
+                                        <a href="{{ url_for('e_announcements.EAnnouncementsView:edit', e_announcement_id=form.id) }}"
+                                           class="btn btn-primary">Edit</a></li>
+                                {% else %}
+                                    <li>
+                                        <a href="{{ url_for('e_announcements.EAnnouncementsView:view', e_announcement_id=form.id) }}"
+                                           class="btn btn-primary">View</a></li>
+                                {% endif %}
+                                <li>
+                                    <a href="{{ url_for('e_announcements.EAnnouncementsView:duplicate', e_announcement_id=form.id) }}"
+                                       class="btn btn-primary">Duplicate</a></li>
+                                {% if not form.first_date_past %}
+                                    <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}"
+                                           data-e-announcement-id="{{ form.id }}"
+                                           class="small btn btn-primary btn-alert delete-press"
+                                           data-toggle="modal" data-target="#myModal">Delete</a></li>
+                                {% endif %}
+                            {% endif %}
+                        </ul>
+                    </div>
                 </div>
             </div>
+            <hr/>
+        {% endfor %}
         </div>
-    {% endfor %}
-{% endblock %}
+    </div>
+</div>
+
+<!-- Modal Core -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"
+                        aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">Are you sure you want to delete?</h4>
+            </div>
+            <div class="modal-body">
+                Your E-Announcement will be removed.
+            </div>
+            <div class="modal-footer">
+                <a id="modal-confirm" href="/e-announcements/delete/formid" type="button"
+                   class="btn btn-primary btn-alert modal-confirm">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
