Reduce the size of the anchor tag

--- a/tinker/news/templates/news-article.html
+++ b/tinker/news/templates/news-article.html
@@ -3,7 +3,7 @@
         <tr>
             <td class="column" style="padding: 40px;text-align: left;vertical-align: top;color: #555;font-size: 14px;line-height: 20px;font-family: Georgia,serif;width: 600px;">
                 <div style="margin-left: 20px;margin-right: 20px; margin-bottom:40px">
-                    <a href="https://www.bethel.edu/{{ path }}"><h1 style="margin-bottom: 5px;font-style: normal;font-weight: normal;color: #0069aa;font-size: 30px;line-height: 28px;font-family: sans-serif;">{{ title }}</h1></a>
+                    <h1 style="margin-bottom: 5px;font-style: normal;font-weight: normal;color: #0069aa;font-size: 30px;line-height: 28px;font-family: sans-serif;"><a href="https://www.bethel.edu/{{ path }}">{{ title }}</a></h1>
                     <p class="article-meta" style="margin-top:10px">{{ date }}</p>
                 </div>
                 <div style="Margin-left: 20px;Margin-right: 20px;">
