Office Hours now syncs to Cascade

--- a/tinker/admin/sync/templates/sync-home.html
+++ b/tinker/admin/sync/templates/sync-home.html
@@ -1,6 +1,6 @@
 {% extends "tinker_base.html" %}
 
-{% set title = 'Sync' %}
+{% set title = 'Cascade Sync' %}
 
 {% block page_title %}Bethel University Tinker{% endblock %}
 
