--- a/tinker/e_announcements/templates/form.html
+++ b/tinker/e_announcements/templates/form.html
@@ -164,37 +164,34 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='pikaday.css') }}">
     <script src="{{ url_for('static', filename='pikaday.js') }}"></script>
     <script src="{{ url_for('static', filename='pikaday.jquery.js') }}"></script>
-    <script language="javascript" type="text/javascript" src="blackout-dates.js"></script>
+    <script language="javascript" type="text/javascript" src="/static/blackout-dates.js"></script>
 
     <script type="text/javascript">
         $(document).ready(function () {
-            $(document).ready(function () {
-                var today = new Date();
-                var blackoutDates = require('./blackout-dates.js');
-                $('.datepicker').each(function (index) {
-                    var picker = new Pikaday({
-                        field: this,
-                        format: 'MM-DD-YYYY',
-                        disableDayFn: function (date) {
-                            // remove all Sun/Tues/Thur/Sat days from the week
-                            if ($.inArray(date.getDay(), [0, 2, 4, 6]) > -1 || blackoutDates.is_date_a_bethel_holiday(date) ) {
-                                return date;
-                            }
-
-                            // Find the previous business day at 1pm, continually searching back until you hit a MWF that is not a holiday
-                            var dateCutoff = date;
-                            dateCutoff.setDate(dateCutoff.getDate() - 1);
-
-                            while (dateCutoff.getDay() == 0 || dateCutoff.getDay() == 6 || blackoutDates.is_date_a_bethel_holiday(dateCutoff)) {
-                                dateCutoff.setDate(dateCutoff.getDate() - 1);
-                            }
-                            dateCutoff.setHours(13);
-
-                            if (dateCutoff <= today) {
-                                return date;
-                            }
+            var today = new Date();
+            $('.datepicker').each(function (index) {
+                var picker = new Pikaday({
+                    field: this,
+                    format: 'MM-DD-YYYY',
+                    disableDayFn: function (date) {
+                        // remove all Sun/Tues/Thur/Sat days from the week
+                        if ($.inArray(date.getDay(), [0, 2, 4, 6]) > -1 || is_date_a_bethel_holiday(date) ) {
+                            return date;
                         }
-                    });
+
+                        // Find the previous business day at 1pm, continually searching back until you hit a MWF that is not a holiday
+                        var dateCutoff = date;
+                        dateCutoff.setDate(dateCutoff.getDate() - 1);
+
+                        while (dateCutoff.getDay() == 0 || dateCutoff.getDay() == 6 || is_date_a_bethel_holiday(dateCutoff)) {
+                            dateCutoff.setDate(dateCutoff.getDate() - 1);
+                        }
+                        dateCutoff.setHours(13);
+
+                        if (dateCutoff <= today) {
+                            return date;
+                        }
+                    }
                 });
             });
             CKEDITOR.config.wordcount = {
